--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "streamdeck-electron",
+  "name": "streamdeck-editor",
   "version": "1.0.0",
-  "description": "StreamDeck Electron",
+  "description": "StreamDeck Editor",
   "homepage": "./",
   "main": "main.js",
   "scripts": {
@@ -14,12 +14,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/headdetect/streamdeck-electron"
+    "url": "git+https://github.com/headdetect/streamdeck-editor"
   },
   "author": "headdetect",
   "license": "MIT",
   "build": {
-    "appId": "com.headdetect.streamdeck",
+    "appId": "com.headdetect.streamdeck-editor",
     "win": {
       "iconUrl": "https://cdn2.iconfinder.com/data/icons/designer-skills/128/react-256.png"
     },
@@ -34,6 +34,7 @@
     "babel-loader": "^8.2.2",
     "babel-minify-webpack-plugin": "^0.3.1",
     "babel-polyfill": "^6.26.0",
+    "classnames": "^2.2.6",
     "cross-env": "^7.0.3",
     "electron": "^11.1.1",
     "electron-builder": "^22.9.1",
@@ -42,7 +43,6 @@
     "elgato-stream-deck": "^4.0.0",
     "eslint": "^7.16.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -53,11 +53,13 @@
     "mini-css-extract-plugin": "^1.3.3",
     "node-gyp": "^7.1.2",
     "node-hid": "^2.1.1",
+    "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "^4.0.1",
     "sass-loader": "^10.1.0",
+    "sharp": "^0.27.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.0",
@@ -74,5 +76,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-import-resolver-webpack": "^0.13.0",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
