--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --config webpack.build.config.js --mode production",
     "package": "npm run build",
     "postpackage": "electron-packager ./ --out=./builds",
-    "postinstall": "electron-rebuild -f -w node-hid && electron-builder install-app-deps"
+    "postinstall": "electron-rebuild -f && electron-builder install-app-deps"
   },
   "repository": {
     "type": "git",
@@ -52,6 +52,7 @@
     "file-loader": "^6.2.0",
     "foreman": "^3.0.1",
     "html-webpack-plugin": "^4.5.0",
+    "jimp": "^0.16.1",
     "lodash": "^4.17.20",
     "mini-css-extract-plugin": "^1.3.3",
     "node-gyp": "^7.1.2",
