--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "jsx-a11y/no-noninteractive-element-interactions": "off",
     "jsx-a11y/click-events-have-key-events": "off",
 
+    "no-prototype-builtins": "off",
     "no-plusplus": "off",
     "no-new": "off",
     "no-await-in-loop": "off",
