--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^6.2.0",
     "foreman": "^3.0.1",
+    "gif-frames": "^1.0.1",
+    "gifsicle": "^5.1.0",
     "html-webpack-plugin": "^4.5.0",
     "jimp": "^0.16.1",
     "lodash": "^4.17.20",
