--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-loader": "^8.2.2",
     "babel-minify-webpack-plugin": "^0.3.1",
     "babel-polyfill": "^6.26.0",
+    "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
     "cross-env": "^7.0.3",
     "electron": "^11.1.1",
