--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --config webpack.build.config.js --mode production",
     "package": "npm run build",
     "postpackage": "electron-packager ./ --out=./builds",
-    "postinstall": "electron-rebuild -f && electron-builder install-app-deps"
+    "rebuild": "electron-rebuild -f && electron-builder install-app-deps"
   },
   "repository": {
     "type": "git",
@@ -47,25 +47,27 @@
     "elgato-stream-deck": "^4.0.0",
     "eslint": "^7.16.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^6.2.0",
     "foreman": "^3.0.1",
     "gif-frames": "^1.0.1",
     "gifsicle": "^5.1.0",
+    "hsluv": "^0.1.0",
     "html-webpack-plugin": "^4.5.0",
     "jimp": "^0.16.1",
     "lodash": "^4.17.20",
     "mini-css-extract-plugin": "^1.3.3",
     "node-gyp": "^7.1.2",
     "node-hid": "^2.1.1",
-    "node-sass": "^5.0.0",
     "omggif": "^1.0.10",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.3",
     "react-scripts": "^4.0.1",
+    "redux": "^4.0.5",
+    "sass": "^1.32.8",
     "sass-loader": "^10.1.0",
     "sharp": "^0.27.0",
     "style-loader": "^2.0.0",
