--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "babel-minify-webpack-plugin": "^0.3.1",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.6.0",
-    "classnames": "^2.2.6",
+    "clsx": "^1.1.1",
     "cross-env": "^7.0.3",
     "electron": "^11.1.1",
     "electron-builder": "^22.9.1",
@@ -67,10 +67,12 @@
     "react-redux": "^7.2.3",
     "react-scripts": "^4.0.1",
     "redux": "^4.0.5",
+    "robotjs": "^0.6.0",
     "sass": "^1.32.8",
     "sass-loader": "^10.1.0",
     "sharp": "^0.27.0",
     "style-loader": "^2.0.0",
+    "sudo-prompt": "^9.2.1",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.0",
     "webpack-dev-server": "^3.11.1"
