--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-draggable": "^4.4.3",
     "react-redux": "^7.2.3",
     "react-scripts": "^4.0.1",
     "redux": "^4.0.5",
